fix dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -32,6 +32,7 @@ header {
   padding-top: 0.2rem;
   font-family: 'Quicksand', serif;
   font-weight: 400;
+  font-size: 1.2rem;
 }
 
 h1 {
@@ -145,8 +146,9 @@ h2 {
 }
 
 .sect3 h2 {
-  color: white;
-  padding-top: 1rem;
+  color: black;
+  padding: 1rem;
+  background-color: #0fa4a5;
 }
 
 .sect3 .spotlight {
