--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,6 +1,8 @@
 @media (min-width: 520px) {
   #mode {
     font-size: 2.4rem;
+    z-index: 2;
+    cursor: pointer;
   }
 
   #menu {
@@ -9,6 +11,10 @@
 
   h1 {
     font-size: 2rem;
+  }
+
+  .sub-heading {
+    font-size: 1.5rem;
   }
 
   .top-bar {
